<resources>
    <string name="app_name">FindEvent</string>
    <string name="find_event">Find Event</string>
    <string name="pref_name">find_event_pref_kjs435jhf_567ud3ke_3jhf8n</string>
    <string name="google_maps_key">AIzaSyCVuQBBcmPQOiqLBCWdGoEAWJnm2qbiubE</string>


    <string name="password">пароль</string>
    <string name="mail">mail</string>
    <string name="login">Войти</string>
    <string name="confirm_pass">подтверждение пароля</string>
    <string name="register">Зарегаться</string>
    <string name="username">Имя</string>
    <string name="onward">Далее</string>
    <string name="findPass">Я вспомнил пароль</string>
    <string name="phone_number">Номер телефона</string>
    <string name="haveAccount">Есть аккаунт?</string>
    <string name="or">или</string>
    <string name="login_vk">Войти через Вконтакте</string>
    <string name="login_google">Войти через GOOGLE</string>
    <string name="forgot_pass">Забыли пароль?</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="error_login">Ошибка при авторизации</string>
    <string name="errorPass1">Минимальная длина пароля 8 символов</string>
    <string name="notFoundRecord">Не найден пользователь с такими данными</string>
    <string name="errorPass2">Пароли не совпадают</string>
    <string name="incorrectData">Не все поля заполнены правильно!</string>
    <string name="requireField">Это поле необходимо заполнить</string>
    <string name="create_error">Не удалось создать нового пользователя</string>
    <string name="is_not_working">Сервис не хочет работать, извините.</string>
    <string name="events">События</string>
    <string name="posters">Объявления</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="count_persons">Мест осталось:</string>
    <string name="not_found_records">По вашему запросу ничего не найдено.</string>
    <string name="feeds_fragment">feeds_fragment</string>
    <string name="profile_fragment">profile_fragment</string>
    <string name="create_fragment">create_feed_fragment</string>
    <string name="dialog_hint_text">Здесь вы можете создавать объявления для поиска или просто делиться с людьми чем либо, а так же события, с целью приглашения людей на различные мероприятия.</string>
    <string name="hint_dialog">Подсказка</string>
    <string name="event">Событие</string>
    <string name="poster">Объявление</string>
    <string name="description_hint">описание события</string>
    <string name="title_hint">тема</string>
    <string name="add_location_event">Указать место на карте</string>
    <string name="add_time_event">Указать время события</string>
    <string name="count_persons_hint">количество мест</string>
    <string name="visible_phone_check">Показать мой мобильный номер</string>


    <string name="not_found_location">Не указано место события</string>
    <string name="not_found_date">Не указана дата или время события</string>
    <string name="not_found_title">Не указана тема события</string>
    <string name="not_found_description">Не указано описание события</string>
    <string name="create">Опубликовать</string>
    <string name="not_found_count">Не указано необходимое количество людей</string>
    <string name="event_added">Событие добавлено</string>
    <string name="canceled">Ошибка во время отправки</string>
    <string name="description_hint1">описание объявления</string>
    <string name="tap_to_choise_photo">Нажмите чтобы выбрать фото</string>
    <string name="photo_message">Вы можете выбрать только 3 фотографии</string>
    <string name="choise_images">Выбор фотографий</string>
    <string name="gallery">Галерея</string>
    <string name="choice">Выбрать</string>
    <string name="gps_is_not_active">Геолокация не включена!</string>
    <string name="title_location">Включение геолокации</string>
    <string name="dialog_location_text">Вы можете включить геолокацию на телефоне, чтобы проще было выбирать место на карте</string>
    <string name="choice_place_map">Выберете место на карте</string>
    <string name="you">Вы</string>
    <string name="any_error">Какая-то важная ошибка</string>
    <string name="success_add_poster">Объявление успешно добавлено</string>
    <string name="fill_event">мест нет</string>
    <string name="my_events">мои события</string>
    <string name="my_posters">мои объявления</string>
    <string name="one_photo_pick">вы можете выбрать только одно фото</string>
    <string name="edit_profile">Редактирование профиля</string>
    <string name="email">Элетронная почта</string>
    <string name="age">Возраст</string>
    <string name="city">Город</string>
    <string name="save">Сохранить</string>
    <string name="not_indicat">Не указан</string>
    <string name="error_email">Не правильно указан электронный адрес пользователя</string>
    <string name="error_name">Не заполнено имя пользователя</string>
    <string name="error_age">Не правильно указан возраст</string>
    <string name="error_phone">Не правильно указан мобильный номер</string>
    <string name="error_city">Не найден город по такому названию</string>
    <string name="error_upload">Ошибка загрузки данных</string>
    <string name="update_success">Данные успешно обновлены</string>
    <string name="b_b"><b>Cjxb</b></string>
    <string name="select">Выбрать</string>
    <string name="city_select">Город в котором вы живете</string>
    <string name="city_name">название города</string>
    <string name="to_start">Начало:</string>
    <string name="i_come">Я пойду</string>
    <string name="fab_content_desc">Переход к обсуждениям события</string>
    <string name="unenabled_person">мест нет</string>
    <string name="error_follow">Не удалось подписаться на событие.</string>
    <string name="success_follow">Вы теперь можете учавствовать в обсуждениях</string>
    <string name="message">сообщение</string>
    <string name="settings">Настройки</string>
    <string name="notification">Уведомления</string>
    <string name="exit_account">Выйти из аккаунта</string>
    <string name="about">О приложении</string>
    <string name="notification_channel_id">asd</string>

</resources>