<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".activities.EditProfileActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/background_action_bar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textSize="15sp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:fontFamily="@font/montserrat_semibold"
            android:letterSpacing="0.05"/>

        <ImageButton
            android:id="@+id/closeButtonActivity"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_close"
            android:layout_marginEnd="8dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/username"/>
    <EditText
        android:id="@+id/editUsername"
        style="@style/edit_profile_text_style"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/email"/>
    <EditText
        android:id="@+id/editEmail"
        android:inputType="textEmailAddress"
        style="@style/edit_profile_text_style"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/age"/>
    <EditText
        android:id="@+id/editAge"
        android:inputType="number"
        style="@style/edit_profile_text_style"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/phone_number"/>

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/editPhone"
        style="@style/edit_profile_text_style"
        app:allowed_chars="1234567890"
        android:inputType="phone"
        android:typeface="monospace"
        app:mask="+7(###)###-##-##"
        app:keep_hint="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/city"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editCity"
            android:inputType="text"
            style="@style/edit_profile_text_style"/>
        <ImageView
            android:id="@+id/checkCityImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="25dp"
            android:layout_gravity="end|center_vertical"/>

    </FrameLayout>
    <TextView
        android:id="@+id/errorTextEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/errorStrokeColor"/>
    <Button
        android:id="@+id/saveButtonEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/save"
        android:textColor="@color/textColor1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textAllCaps="false"
        android:fontFamily="@font/montserrat_semibold"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_auth_selector"/>
</LinearLayout>