<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    tools:context=".fragments.CreatePosterFragment">

    <ScrollView
        style="@android:style/Widget.Material.Light.ScrollView"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/titleCreatePoster"
                android:maxLength="50"
                android:singleLine="true"
                android:hint="@string/title_hint"
                android:fontFamily="@font/montserrat_bold"
                style="@style/edit_text_create_style"/>
            <EditText
                android:id="@+id/descriptionCreatePoster"
                android:layout_marginTop="10dp"
                android:hint="@string/description_hint1"
                android:maxLength="500"
                android:padding="5dp"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="13sp"
                style="@style/edit_text_create_style"/>


            <LinearLayout
                android:id="@+id/locationButton"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_location"/>
                <TextView
                    android:text="@string/add_location_event"
                    style="@style/text_view_create_style"/>
            </LinearLayout>
            <TextView
                android:id="@+id/addressPosterCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:visibility="gone"
                android:gravity="center"
                android:textColor="@color/blueColor"
                android:text=""
                android:layout_margin="10dp"
                android:fontFamily="@font/montserrat_semibold"/>

            <CheckBox
                android:id="@+id/checkBoxIsPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/textColor"
                android:theme="@style/checkbox_style"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:text="@string/visible_phone_check"/>
            <ProgressBar
                android:id="@+id/createPosterProgressBar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:indeterminateTint="@color/blueColor"
                android:layout_margin="10dp"
                android:visibility="gone"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:visibility="visible"
                android:id="@+id/imagesLayoutItemPoster"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imageLeftItemPoster"
                    style="@style/images_create_poster"
                    app:riv_corner_radius_top_left="15dp"
                    app:riv_corner_radius_bottom_left="15dp"/>

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imageCenterItemPoster"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    style="@style/images_create_poster"/>

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imageRightItemPoster"
                    style="@style/images_create_poster"
                    app:riv_corner_radius_bottom_right="15dp"
                    app:riv_corner_radius_top_right="15dp"/>

            </LinearLayout>
            <TextView
                android:id="@+id/errorTextViewCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/errorStrokeColor"
                android:text="@string/not_found_location"
                android:gravity="center"
                android:visibility="invisible"
                android:fontFamily="@font/montserrat_medium"/>
            <Button
                android:id="@+id/addPosterButton"
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:text="@string/create"
                android:textColor="@color/textColor1"
                android:fontFamily="@font/montserrat_medium"
                android:layout_margin="5dp"
                android:background="@drawable/btn_auth_selector"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>